<resources>
    <string name="app_name">CheekyBastard Settings</string>
    <string name="hello_world">Hello world!</string>
 <string name="action_settings">Settings</string>
    <string name="menu_settings">Menu</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
<string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_show_drawer_icon">Show in app drwer</string>
    <string name="hello">ThemesDemo</string>
    <string name="createLabel">Create an Item</string>
    <string name="quit_title">Exit</string>
    <string name="error_demo_label">Show Error Dialog</string>
    <string name="help_title">Help</string>
    <string name="help_text">Use the Settings menu to change the display theme. \n\n<i>USAGE</i>\nYou can 
        toggle between light and dark themes for both the main displays and the dialog windows. 
        Notice that this textfield is wrapped in a scroll view, so should scroll if there is too 
        much text to fit in the window. \n\n<i>VERSION</i>\nThis example requires Android API 15 or above.</string>
    <string name="about_text">This apl allows you to easily customize PureNexus to your personal liking. Enjoy fuckers.</string>
    <string name="Theme">Default Theme</string>
    <string name="theme_prompt">Please select a default theme</string>
    <string name="about_title">About</string>
    <string name="settings_title">Settings</string>
    <string name="restart">Restart with New Style</string>
    <string name="pref1_title">No titlebars</string>
    <string name="pref1_summary">Suppress titlebars on screens</string>
    <string name="pref2_title">Job priority</string>
    <string name="pref2_summary">Set desired job priority</string>
    <string name="pref3_title">Username</string>
    <string name="pref3_summary">Edit the username</string>
    <string name="pref4_title">Light background theme</string>
    <string name="pref4_summary">Enable light background theme</string>
    <string name="create_item1">Task Choice 1</string>
    <string name="create_item2">Task Choice 2</string>
    <string name="processMenu_title">Select Item</string>
    <string name="task_description1">A description of Task 1 will go in this field.</string>
    <string name="task_description2">A description of Task 2 will go in this field.</string>
    <string name="desc_list_item_icon">Item Icon</string>
<string name="activity_persistent">App/Activity/Persistent State</string>
<string name="persistent_msg">Demonstration of persistent activity state with getPreferences(0).edit() and getPreferences(0).</string>
<string name="activity_recreate">App/Activity/Recreate</string>
<string name="activity_recreate_msg">Demonstration recreating an activity, to have
    it reconstructed with significant new changes.  In this case the theme is changed.</string>
<string name="recreate">Recreate</string>
<string name="activity_finish_affinity">App/Activity/Finish Affinity</string>
<string name="receive_result_instructions">Press the button to get an activity result, which will be displayed here:</string>
<string name="receive_result_result">Get Result</string>
<string name="activity_receive_result">App/Activity/Receive Result</string>
<string name="activity_forwarding">App/Activity/Forwarding</string>
<string name="forwarding">Press the button to go forward to the next activity.  This activity will stop, so you will no longer see it when going back.</string>
<string name="go">Go</string>
<string name="forward_target">Press back button and notice we don\'t see the previous activity.</string>
<string name="pick_result">Pick a result to send, or BACK to cancel.</string>
<string name="corky">Corky</string>
<string name="violet">Violet</string>
<string name="tabs_1_tab_1">tab1</string>
<string name="tabs_1_tab_2">tab2</string>
<string name="tabs_1_tab_3">tab3</string>
<string name="activity_hello_world">App/Activity/<b>Hello <i>World</i></b></string>
 <string name="activity_dialog">App/Activity/Dialog</string>
    <string name="dialog_activity_text">Example of how you can use the
            Theme.Dialog theme to make an activity that looks like a
            dialog.  It also has lots of text to show how text wrapping (and
            corresponding window size adjustment) can happen in a dialog.</string>
    <string name="dialog_activity_add">Add content</string>
    <string name="dialog_activity_remove">Remove content</string>
    <string name="activity_custom_dialog">App/Activity/Custom Dialog</string>
    <string name="custom_dialog_activity_text">Example of how you can use a
            custom Theme.Dialog theme to make an activity that looks like a
            customized dialog, here with an ugly frame.</string>
    <string name="quick_contacts_demo">App/Activity/QuickContactsDemo</string>
    <string name="activity_wallpaper">App/Activity/Wallpaper</string>
    <string name="activity_setwallpaper">App/Activity/SetWallpaper</string>
    <string name="set_wallpaper">Set Wallpaper</string>
    <string name="randomize">Randomize</string>
    <string name="activity_screen_orientation">App/Activity/Screen Orientation</string>
    <string name="screen_orientation_summary">Demonstrates the available screen
        orientation modes.  Often you want to set the desired mode in your manifest
        instead of programmatically.</string>
    <string name="screen_orientation">Screen Orientation</string>
    <string name="activity_redirect">App/Activity/Redirection</string>
    <string name="redirect_enter">Press the button to start the example.  The next activity will conditionally redirect to another activity to collect data from the user.</string>
    <string name="redirect_main">You now see the main activity running normally because the user text has been set to:</string>
    <string name="clear_text">Clear and Exit</string>
    <string name="new_text">New Text</string>
    <string name="redirect_getter">Enter the text that will be used by the main activity.  Press back to cancel.</string>
    <string name="apply">Apply</string>
    <string name="title_activity_item_one">ItemOne</string>
    <string name="title_activity_item_two">ItemTwo</string>
    <string name="title_section1">Unlinked Colors</string>
    <string name="title_section2">Background Colors</string>
    <string name="title_section3">Animations</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="current_speed">Current Speed</string>
    <string name="current_max">Current max:</string>
    <string name="vibration">Vibration</string>
    <string name="vibration_on">Vibration on</string>
    <string name="vibration_off">Vibration off</string>
    <string name="notify_on">Notification on</string>
    <string name="notify_off">Notification off</string>
    <string name="notify">Notifications</string>
    <string name="screen_on">Keep screen on</string>
    <string name="screen">Screen on</string>
    <string name="screen_off">Dont keep screen on</string>
    <string name="wrap_msg_on">Wrap output message</string>
    <string name="wrap_msg_off">Dont wrap output message</string>
    <string name="busybox_version">Busybox version</string>
    <string name="show_exit">Show Exit button</string>
    <string name="hide_exit">Hide Exit button</string>
    <string name="have_root">Use root perms</string>
    <string name="no_root">Dont use root perms</string>
    <string name="diag_title">On-Device Logging</string>
    <string name="diag_summary">Redirect DIAG traffic to Memory Device on Phone</string>
    <string name="stay_on_plugged_title">Stay On Plugged</string>
    <string name="stay_on_plugged_summary">Screen will be on during charging</string>
    <string name="dim_screen_title">Dim Screen</string>
    <string name="dim_screen_summary">Screen will be Dim</string>
    <string name="QualcommSettings">Qualcomm Settings</string>
    <string name="ims_reg_title">IMS Registration</string>
    <string translatable="false" name="default_ims_reg_state">Register/Deregister IMS
    </string>
    <string name="auto_answer_title">Voice Call Auto Answer</string>
    <string name="auto_answer_summary">Set voice call auto answer timeout</string>
    <string name="auto_answer_default">-1</string>
    <string name="fluence_title">Fluence</string>
    <string name="fluence_summary">Fluence</string>
    <string name="fluence_default">none</string>
    <string name="go_dormant_title">Data Call Go Dormant</string>
    <string name="go_dormant_summary">Set data call to dormant mode</string>
    <string name="usb_mass_storage_title">USB Mass Storage</string>
    <string name="usb_mass_storage_summary">Enable/Disable USB Mass Storage</string>
    <string name="usb_remote_wakeup_title">USB Remote Wakeup</string>
    <string name="usb_remote_wakeup_summary">Enable/Disable USB Remote Wakeup</string>
    <string name="sd_poll_title">SD Polling</string>
    <string name="sd_poll_summary">Enable/Disable SD Polling</string>
    <string name="dualmic_title">Dual Microphone</string>
    <string name="dualmic_summary">Enable/Disable dual mic during call</string>
    <string name="anc_title">ANC</string>
    <string name="anc_summary">Enable/Disable ANC during call</string>
    <string name="sensors_title">Sensors</string>
    <string name="sensors_summary">Enable/Disable Sensors</string>
    <string name="touch_injection_title">Gestures Touch Injection</string>
    <string name="touch_injection_summary">Enable/Disable Touch Injection</string>
    <string name="usb_hub_title">Fusion USB Hub</string>
    <string name="usb_hub_summary">Enable/Disable USB Tethering/DUN</string>
    <string name="usb_composition_title">USB Composition</string>
    <string name="usb_composition_summary">Select required USB Composition</string>
    <string name="usb_composition_default">9017</string>
    <string name="cabl_settings_title">Content Adaptive Backlight Options</string>
    <string name="cabl_settings_summary">Adjust the Backlight based on the screen contents</string>
    <string name="svi_settings_title">Sunlight Visibility Improvement Options</string>
    <string name="svi_settings_summary">Enhance viewing experience base on ambient light conditions</string>
    <string name="ad_settings_title">Assertive Display Options</string>
    <string name="ad_settings_summary">Enhance viewing based on the ambient condition</string>
    <string name="pp_settings_title">Picture Attributes</string>
    <string name="pp_settings_summary">Adjust HSIC values</string>
    <string name="usb_otg_mode_title">OTG Mode</string>
    <string name="usb_otg_mode_summary">Select required OTG Mode</string>
    <string name="usb_otg_mode_default">peripheral</string>
    <string name="data_usage_title">Data Usage</string>
    <string name="data_usage_summary">Select the Data Limit</string>
    <string name="data_monitor_title">Data Monitor</string>
    <string name="data_monitor_summary">Enable/Disable Data Monitor</string>
    <string name="incallmusic_title">Incall Music</string>
    <string name="incallmusic_summary">Enable/Disable Incall Music during call</string>
    <string name="storage_device_settings_title">File manager settings</string>
    <string name="view_storage_title">File Manager</string>
    <string name="view_storage_summary">Select default file manager from installed packages</string>
    <string name="file_browser_packages_list">Available packages </string>
    <string name="set_cdma_sub_src_title">Set CDMA Subscription</string>
    <string name="set_cdma_sub_src_summary">Change between RUIM/SIM, NV and Use RUIM if available</string>
    <string name="cdma_nwk_avoidance_title">CDMA Manual System Avoidance</string>
    <string name="cdma_nwk_avoidance_summary">Avoid the current network, or clear the avoidance network list.</string>
</resources>