<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.cheekybastards.ftw.MainActivity">
    <item android:id="@+id/action_show_drawer_icon"
          android:title="@string/menu_show_drawer_icon"
          android:checkable="true"
          android:orderInCategory="100"
          app:showAsAction="never" />
    <item
        android:id="@+id/help"
        android:orderInCategory="0"
        app:showAsAction="ifRoom"
        android:title="@string/help_title"/>
    <item
        android:id="@+id/about"
        android:orderInCategory="5"
        app:showAsAction="ifRoom"
        android:title="@string/about_title"/>
    <item
        android:id="@+id/prefs"
        android:orderInCategory="10"
        app:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/quit"
        android:orderInCategory="15"
        app:showAsAction="never"
        android:title="@string/quit_title"/>

</menu>
